# Sno-py

./: .gitignore  .pre-commit-config.yaml  .snorc  LICENSE  README.md  api.md  pyproject.toml
scripts/: generator.py
src/sno_py/: __init__.py  __main__.py  bindings.py  buffer.py  color_utils.py  config.py  di.py  editor.py  entry.py  filters.py  fonts_utils.py  icons.py  layout.py  lexer.py  redirect.py  singleton.py  snocommand.py  snoedit.py  strings.py  style.py  vi_modes.py  window.py  xsh.py
src/sno_py/commands/: completer.py  handler.py
src/sno_py/data/queries/markdown.inline/: highlights.scm
src/sno_py/filetypes/: __init__.py  defaults.py  filetypes.py
src/sno_py/lsp/: client.py  completion.py  diagnostic.py  manager.py
src/sno_py/lsp/typing/: client.pyi  manager.pyi
src/sno_py/storage/: bars.py  processors.py
src/sno_py/typing/: bindings.pyi  buffer.pyi  entry.pyi  filters.pyi  layout.pyi  snocommand.pyi  snoedit.pyi  vi_modes.pyi
src/sno_py/widgets/: commandbar.py  lsp_completions.py  lsp_processor.py  lspreportbar.py  messagebar.py  searchbar.py  statusbar.py  tabbar.py
