[tool.poetry]
name = "snoo-py"
version = "0.1.0"
description = "Personal vim like file editor. Because Why Not?"
authors = ["Marcel Alexandru Nitan <nitan.marcel@protonmail.com>"]
license = "MIT"
packages = [{include = "sno_py", from="src"}]

[tool.poetry.dependencies]
python = "^3.10"
prompt-toolkit = "^3.0.48"
pygments = "^2.18.0"
appdirs = "^1.4.4"
xonsh = {extras = ["full"], version = "^0.18.3"}
strenum = "^0.4.15"
asyncer = "^0.0.8"
typing-extensions = "^4.12.2"
sansio-lsp-client = "^0.12.0"
markdown = "^3.7"
ptvertmenu = {git = "https://github.com/lpenz/ptvertmenu"}
uvloop = "^0.20.0"

[tool.poetry.dev-dependencies]

[tool.poetry.scripts]
"sno-py" = "sno_py:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
