[tool.poetry]
name = "snoo-py"
version = "2.0.0"
description = "A personal code editor I've written for myself. Because why not?"
authors = ["Marcel Alexandru Nitan <nitan.marcel@protonmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "sno_py", from="src"}]
include = [
    { path = "src/sno_py/data", format = ["sdist", "wheel"] }
]

[tool.poetry.scripts]
"sno-py" = "sno_py:__main__.main"

[tool.poetry.dependencies]
python = "^3.10"
appdirs = "^1.4.4"
Markdown = "^3.7"
prompt-toolkit = "^3.0.48"
ptterm = {git = "https://github.com/prompt-toolkit/ptterm"}
ptvertmenu = {git = "https://github.com/lpenz/ptvertmenu"}
pyte = "0.5.1"
sansio-lsp-client = "^0.12.0"
typing-extensions = "^4.12.2"
xonsh = "^0.18.3"
attrs = "^24.2.0"
aiopathlib = "^0.5.0"
tree-sitter = "^0.23.1"
uvloop = "^0.21.0"

[tool.poetry.group.dev.dependencies]
pre-commit = "^4.0.0"
unexport = "^0.4.0"
ruff = "^0.6.9"
auto-walrus = "^0.3.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
